# mlds6_sentiments_dashboard

./: .gitignore  Makefile  env_vars.sample  pyproject.toml
docs/acceptance/: exit_report.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/infrastructure/: infrastructure_docs.md
docs/modeling/: baseline_models.md
mlds6sentiment/database/: clients.py  fetch.py  io.py  transform.py  upload.py
mlds6sentiment/datamodels/: database.py  environment.py  experiment.py
mlds6sentiment/environment/: base.py
mlds6sentiment/models/: experiment.py  feature_extraction.py  model.py
mlds6sentiment/preprocessing/: reviews.py
mlds6sentiment/training/: reviews.py
scripts/dashboard/: example.py  main.py
scripts/dashboard/assets/: dashboard.css
scripts/data_acquisition/: download_dataset.sh  upload_to_mongo.py
scripts/eda/: eda_reviews.py  tree_understanding_reviews.py
scripts/preprocessing/: preprocess_reviews.py
scripts/training/: test_model_pipe.py  training.py
scripts/training/hyperparams/: hyperparameters.json  random_kfold.json
