[tool.poetry]
name = "mlds6sentiment"
version = "0.1.0"
description = "Example dashboard for sentiment analysis developed at MLDS6."
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pymongo = {extras = ["srv"], version = "^4.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
