[tool.poetry]
name = "mlds6sentiment"
version = "0.1.0"
description = "Example dashboard for sentiment analysis developed at MLDS6."
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pymongo = {extras = ["srv"], version = "^4.0"}
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
wordcloud = "^1.8.1"
nltk = "^3.6.5"
spacy = "^3.2.0"
sklearn = "^0.0"
pyarrow = "^6.0.1"
plotly = "^5.4.0"
dash = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
